--- a/sass/partials/_checkout-payment-methods.scss
+++ b/sass/partials/_checkout-payment-methods.scss
@@ -41,7 +41,7 @@
 
 
 // Hide default radio elements with opacity to allow for keyboard navigation
-.wc_payment_method input[type="radio"] {
+.fc-wrapper #payment .payment_methods > .wc_payment_method input[type="radio"] {
 	position: absolute;
 	display: block;
 	width: 1px;
